# mlir-toy-bazel

./: .bazelrc  .clang-format  .gitmodules  CMakeLists.txt  README.md  WORKSPACE  llvm  mlir
examples/: CMakeLists.txt
examples/conv/: BUILD  CMakeLists.txt  conv1d.cc  conv1d.h  conv1d_test.cc
examples/matmul/: BUILD  CMakeLists.txt  aie_plugin.c  iree_matmul.cc  linalg_matmul.mlir  linalg_matmul_cascaded.mlir  linalg_matmul_simple.mlir  linalg_matmul_small.mlir  make_matmul_example.py  matmul.c  matmul.cc  matmul.h  matmul_4x2048x2048_aie_offload.mlir  matmul_offload.mlir  matmul_test.cc  system_plugin.c
examples/matmul/aie/: BUILD  CMakeLists.txt  aie_standalone_plugin.c  aie_system_plugin.c  matmul.cc  matmul.h  matmul_aie_offload.mlir  matmul_aie_offload.vmfb  matmul_dump.txt  matmul_test
examples/opengrok/: README.md  docker-compose-iree.yml
examples/shark/: analyze_outputs.ipynb  analyze_outputs.py  opt_comparison.ipynb  opt_comparison.py  opt_linalg_matmul.py
examples/torch-mlir/: simplenn.py
examples/toy/: BUILD  dummy_pass.cc  dummy_pass.h  ops_test.cc
scripts/: logtee.sh  passdiff.py  sccs.py
util/: BUILD  CMakeLists.txt  base_util.h  base_util_test.cc  matrix_util.cc  matrix_util.h  matrix_util_test.cc  to_string.h  to_string_test.cc  util.h  util_test.cc
